--- a/package.json
+++ b/package.json
@@ -3,8 +3,6 @@
   "version": "0.0.0",
   "devDependencies": {
     "bower": "^1.7.7",
-    "grunt": "^1.0.1",
-    "grunt-contrib-jshint": "^1.1.0",
     "grunt-contrib-watch": "^1.0.0",
     "http-server": "^0.9.0",
     "jasmine-core": "^2.4.1",
@@ -33,8 +31,5 @@
   "license": "MIT",
   "repository": "https://github.com/angular/angular-seed",
   "description": "A starter project for AngularJS",
-  "private": true,
-  "dependencies": {
-    "angular-ui-router": "^0.4.2"
-  }
+  "private": true
 }
