--- a/package.json
+++ b/package.json
@@ -1,9 +1,6 @@
 {
   "name": "angular-seed",
   "version": "0.0.0",
-  "engines": {
-    "node": "^6.9.4"
-  },
   "devDependencies": {
     "bower": "^1.7.7",
     "grunt-contrib-watch": "^1.0.0",
@@ -31,6 +28,11 @@
     "test": "karma start karma.conf.js",
     "test-single-run": "karma start karma.conf.js --single-run"
   },
+  
+  "engines": {
+    "node": "0.12.2"
+  },
+  
   "license": "MIT",
   "repository": "https://github.com/angular/angular-seed",
   "description": "A starter project for AngularJS",
